--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,4 +1,5 @@
-modLoader="javafml" #mandatoryloaderVersion="[34,)" #mandatory
+modLoader="javafml" #mandatory
+loaderVersion="[34,)" #mandatory
 license="All rights reserved"
 issueTrackerURL="https://github.com/Silverminer007/MoreOre-1.16/issues" #optional
 [[mods]] #mandatory
